# pygithooks

./: .gitignore  LICENSE.txt  README.md  pygithooks.py  pyproject.toml
.pygithooks/pre-commit/: ruff-check
