[project]
name = "pygithooks"
description = "A simple Git hooks manager for Python projects"
authors = [
    { name = "Boldizsar Palotas", email = "boldizsar.palotas@gmail.com" },
]
license = { text = "0BSD" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
# TODO list allowed features
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "rich", # rich text console output
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.scripts]
pygithooks = 'pygithooks:main'

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    # Linting and type checking:
    "ruff",
    "mypy",
    # Testing:
    "pytest",
    "GitPython",
    "tox",
    # Package management and building:
    "build",
    "pdm",
    "pdm-backend",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
check_untyped_defs = true
